Fix blinking scrollbars in firefox The loading spinner caused a layout overflow.

--- a/josh-ui/public/index.css
+++ b/josh-ui/public/index.css
@@ -221,6 +221,7 @@
   transform: translateZ(0);
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
+  overflow: clip;
 }
 @-webkit-keyframes load8 {
   0% {
